--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ html,
 body {
     padding: 0;
     margin: 0;
+    background: #000;
 }
 
 meeting-cards {
@@ -12,13 +13,21 @@ meeting-cards {
 }
 
 meeting-card {
-    width: 25%;
+    width: 25vw;
     background: white;
-    border-right: 1px solid white;
-    border-bottom: 1px solid white;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
     box-sizing: border-box;
     height: 20vh;
     background-image: repeating-radial-gradient(circle at 50% 70%, rgba(255, 255, 255, 0.05) 5%, transparent 20%, rgba(255, 255, 255, 0.15) 25%);
+    overflow: hidden;
+}
+
+@media screen and (orientation: landscape) {
+    meeting-card {
+        height: 25vh;
+        width: 25vw;
+    }
 }
 
 meeting-card.open {
