--- a/css/meeting-card.css
+++ b/css/meeting-card.css
@@ -8,6 +8,7 @@
     font-size: 3.8vw;
     text-align: center;
     padding: 2vh 2vw;
+    user-select: none;
 }
 
 @media screen and (orientation: landscape) {
